# Autonomous_Localization_Turtlebot3

./: README.md  readme.txt
bot_waypoint_msgs/: CMakeLists.txt
final_project/: CMakeLists.txt
localization_turtle/: CMakeLists.txt  package.xml
localization_turtle/include/localization_turtle/: waypoint_publisher.hpp  waypoint_reacher.hpp
localization_turtle/src/: main.cpp  waypoint_publisher.cpp  waypoint_reacher.cpp
part_publisher/include/part_publisher/: part_publisher_node.hpp
part_publisher/src/: part_publisher_node.cpp
task2/: CMakeLists.txt  package.xml
task2/include/task2/: bot_navigate.hpp  camera_broadcaster.hpp  part_string.hpp  part_subscriber_node.hpp
task2/src/: bot_navigate.cpp  camera_broadcaster.cpp  main.cpp  part_string.cpp  part_subscriber_node.cpp
